MODINVOICE-603. Fix sonar